@@ -1,3 +1,8 @@
+2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Load
+	partmap before abstraction.
+
 2011-06-24  Alexander Kurtz <kurtz.alex@googlemail.com>
 
 	* util/grub-mkconfig_lib.in: Add missing quotes.
